--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
 
     <div class="blink" id="contact"><br><br>
       <center><h1><u>Contact Us</u></h1><br>
-      <img src="imgcon.png" alt="">
+       <img src="facebook.png" alt="">
+        <img src="twitter.webp" alt="" style="height: 340px; margin-left: -15%;">
+        <img src="inst.png" alt="" style="margin-left: -15%;">
       </center>
 
     </div>
